--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-native": "0.73.6",
+    "react-native-macos": "^0.73.0-0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
